kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app
  namespace: my-app
spec:
  selector:
    app: java-app
  ports:
  - port: 8080
    targetPort: http
